gccida/c0/regrename_optimize
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regrename_optimize/src/regrename.c:825:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( **( _DWORD **)this->loc)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regrename_optimize/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regrename_optimize/src/regrename.c:826:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = mode_class_0[( unsigned __int8)BYTE2( **( _DWORD **)this->loc)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regrename_optimize/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regrename_optimize/src/regrename.c:846:44: error: use of undeclared identifier 'machine_mode'
tmp && ix86_hard_regno_mode_ok( new_reg, ( machine_mode)( unsigned __int8)BYTE2( **( _DWORD **)tmp->loc)); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regrename_optimize/src/regrename.c:846:59: error: expected expression
tmp && ix86_hard_regno_mode_ok( new_reg, ( machine_mode)( unsigned __int8)BYTE2( **( _DWORD **)tmp->loc)); 
                                                          ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regrename_optimize/src/obj/regrename.o] Error 1
